2003-05-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (byte-optimizer for match-string-no-properties):
	`lenght' -> `length'.

2003-05-27  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el: Simplify functions that rewrite URIs.
	(toplevel): Autoload `w3m-search-uri-replace' instead of
	`w3m-search-quick-search-handler'.
	(w3m-uri-replace-alist): Changed its default value and its
	customize spec.
	(w3m-pattern-uri-replace): New function.
	(w3m-uri-replace): Reimplemented.

	* w3m-search.el (w3m-search-quick-search-engine-alist): Abolished.
	(w3m-search-quick-search-engines): Removed.
	(w3m-search-quick-search-handler): Removed.
	(w3m-search-uri-replace): New function.

2003-05-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-highlight-current-anchor): Don't infloop even if a
	w3m buffer is narrowed.

2003-05-24  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-lotusex.el: New file.

2003-05-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-make-package): Make it work under non-Mule
	XEmacs.

2003-05-22  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-muchy.el (shimbun-muchy-get-headers): Modify regexp
	slightly.

2003-05-21  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-jpo.el (shimbun-jpo-headers): Use `w3m-expand-url' to
	get full URL.
	(shimbun-jpo-headers-1): Ditto.
	Bug fixed.
	(shimbun-jpo-headers-group-details): Use `dolist' to simplify code.
	Use `w3m-expand-url' to get full URL.

2003-05-19  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-jpo.el (shimbun-jpo-contents): Modify regexp to pick
	up email address properly.

2003-05-19  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-w3m.el (mew-w3m-use-safe-url-regexp): New variable.
	(mew-w3m-view-inline-image, mew-mime-text/html-w3m): Use
	`mew-w3m-use-safe-url-regexp' for `w3m-safe-url-regexp'.

2003-05-18  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-yahoo.el (shimbun-yahoo-groups-alist): Add topnews
	group entry.
