@@ -8,4 +8,4 @@ config.status*
 configure
 patch
 w3m-kwds.el
-w3m_el*
+emacs-w3m-*.tar.gz
