@@ -1,3 +1,14 @@
+2003-05-28  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
+
+	* .cvsignore: Ignore tarballs.
+
+	* Makefile.in (SUBDIRS): New macro.
+	(tarball): Refer the above macro, and put texinfo sources into a
+	tarball.
+
+	* aclocal.m4 (AC_ADD_LOAD_PATH): Use the variable `EGREP' instead
+	of the literal `grep'.
+
 2003-05-27  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3mhack.el (byte-optimizer for match-string-no-properties):
